add textview, imageview, and styling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">About Me</string>
+    <string name="star_image">Star image</string>
+    <string name="thomas">Thomas</string>
 </resources>
